# eth-lindy-indexer

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: product_requirements.md  schema.sql
src/: main.py
src/api/: router.py
src/core/: config.py  db_service.py  engine.py  provider.py  sync.py
src/database/: connection.py  models.py  repository.py
src/domain/: decoder.py  schemas.py
src/indexer/: __init__.py  api.py  config.py  db_service.py  decoder.py  provider.py  sync.py
src/indexer/models/: __init__.py  database.py  orm.py  repository.py  schemas.py
src/indexer/utils/: math.py
src/utils/: blockchain_math.py  math.py
tests/: test_api.py  test_database.py  test_decoder.py  test_engine.py  test_math.py  test_models.py  test_provider.py  test_repository.py  test_rollback.py  test_sync.py
